proxy, java8対応